<resources>
    <string name="app_name">Система учета рабочего времени</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="required">Необходимо заполнить*</string>
    <string name="uid">Uid</string>
    <string name="att_title">Посещаемость сотрудников</string>
    <string name="persons_title">Сотрудники</string>
    <string name="add_person_title">Добавить сотрудника</string>
    <string name="button_add">Добавить</string>
    <string name="job_title">Должность</string>
    <string name="last_name">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="more">Подробнее</string>
    <string name="attendances">Посещения</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="number">Номер телефона</string>
    <string name="gates">Проходные</string>
    <string name="enter_gate_name">Введите название проходной</string>
</resources>