<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/navigation_start">

    <fragment
        android:id="@+id/navigation_start"
        android:name="com.mirea.attsystem.ui.screens.StartFragment"
        android:label="@string/att_title"
        tools:layout="@layout/fragment_start"/>

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.mirea.attsystem.ui.screens.PersonFragment"
        android:label="@string/persons_title"
        tools:layout="@layout/fragment_person">
        <action
            android:id="@+id/action_navigation_person_to_navigation_add_person"
            app:destination="@id/navigation_add_person" />
        <action
            android:id="@+id/action_navigation_person_to_editPersonFragment"
            app:destination="@id/navigation_edit_person" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_person"
        android:name="com.mirea.attsystem.ui.screens.AddPersonFragment"
        android:label="@string/add_person_title"
        tools:layout="@layout/fragment_add_person" >
        <action
            android:id="@+id/action_navigation_add_person_to_navigation_person"
            app:destination="@id/navigation_person" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit_person"
        android:name="com.mirea.attsystem.ui.screens.EditPersonFragment"
        android:label="fragment_edit_person"
        tools:layout="@layout/fragment_edit_person" >
        <action
            android:id="@+id/action_navigation_edit_person_to_navigation_person"
            app:destination="@id/navigation_person" />
    </fragment>
</navigation>