<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.AddPersonFragment"
    android:background="@color/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/main_black"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:hintTextColor="@color/main_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_va_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:textColorHint="@color/main_black" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/uid"
            app:boxStrokeColor="@color/main_black"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:hintTextColor="@color/main_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiName"
            app:startIconDrawable="@drawable/ic_va_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEtUid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:textColorHint="@color/main_black" />


        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>